Fix dark mode in ActionParse mobile style

--- a/www/-/s/style-mobile.css
+++ b/www/-/s/style-mobile.css
@@ -2085,7 +2085,6 @@ body {
 
 #content {
     border-top: solid 1px transparent;
-    background-color: #ffffff;
     padding-bottom: 32px
 }
 
